frontend/src/container/NewWidget/NewWidget.styles.scss
.facing-issue-btn-container {
	display: grid;
	grid-template-columns: 1fr max-content;
}

.edit-header {
	display: flex;
	height: 48px;
	flex-shrink: 0;
	border-bottom: 1px solid var(--l1-border);
	background: var(--l1-background);
	justify-content: space-between;
	align-items: center;
	padding: 0px 12px 0px 16px;

	.left-header {
		display: flex;
		gap: 16px;
		align-items: center;

		.discard-icon {
			color: var(--l1-foreground);
			cursor: pointer;
		}

		.configure-panel {
			color: var(--l1-foreground);
			font-family: Inter;
			font-size: 14px;
			font-style: normal;
			font-weight: 400;
			line-height: 20px; /* 142.857% */
			letter-spacing: -0.07px;
			border-left: 1px solid var(--l1-border);
			padding-left: 16px;
		}
	}

	.right-header {
		display: flex;
		gap: 16px;
	}
}

.new-widget-container {
	.resizable-panel-left-container {
		overflow-x: hidden;
		overflow-y: auto;
	}

	.resizable-panel-right-container {
		overflow-y: auto !important;
		min-width: 350px;

		&::-webkit-scrollbar {
			width: 0.3rem;
		}
		&::-webkit-scrollbar-thumb {
			background: rgb(136, 136, 136);
			border-radius: 0.625rem;
		}
		&::-webkit-scrollbar-track {
			background: transparent;
		}
	}

	.widget-resizable-panel-group {
		.widget-resizable-handle {
			height: 100vh;
			background: color-mix(in srgb, var(--l3-background) 20%, transparent);
		}
	}
}

